Updated upstart config file

--- a/config/upstart/shawty.conf
+++ b/config/upstart/shawty.conf
@@ -1,9 +1,6 @@
-# rsyslog - system logging daemon
-#
-# rsyslog is an enhanced multi-threaded replacement for the traditional
-# syslog daemon, logging messages from applications
+# shawty.js - URL shortener webserver written in Node.js
 
-description	"shawty url shortener webserver"
+description "shawty url shortener webserver"
 
 start on startup
 stop on shutdown
