--- a/config/upstart/shawty.conf
+++ b/config/upstart/shawty.conf
@@ -9,9 +9,9 @@ script
 
     ### PRODUCTION HOSTING
     export HOME="/home/www-data/"
-    exec sudo -u www-data node /opt/shawty/shawty.js --host shawty.com --port 80 --db-host mongo_host --db-port 27017 --db-name mongo_name -d trusteddomain1.com,trusteddomain2.com
+    exec sudo -u www-data node /usr/lib/shawty/shawty.js --host shawty.com --port 80 --db-host mongo_host --db-port 27017 --db-name mongo_name -d trusteddomain1.com,trusteddomain2.com
 
     ### LOCAL HOSTING
     #export HOME="/root"
-    #exec node /opt/shawty/shawty.js --host 127.0.0.1 --port 8080 --db-host 127.0.0.1 --db-port 27017 --db-name local -d trusteddomain1.com,trusteddomain2.com
+    #exec node /usr/lib/shawty/shawty.js --host 127.0.0.1 --port 8080 --db-host 127.0.0.1 --db-port 27017 --db-name local -d trusteddomain1.com,trusteddomain2.com
 end script
