--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
    ],
    "bin": {
        "shawty": "./shawty.js"
-   }
+   },
+   "scripts": {
+       "start": "node shawty.js"
+   },
    "author": {
        "name": "John Nadratowski",
        "email": "john@unifiedsocial.com",
@@ -27,12 +30,12 @@
        "url": "git@github.com:Unified/shawty.git" 
    }, 
    "dependencies": {
-       "winston": ">=0.6.*",
-       "argparse": ">=0.1.*",
-       "mongodb": ">=1.2.*"
-   }
-   "engines": {
-       "node": ">=0.8.14"
+       "winston": ">=0.6.x",
+       "argparse": ">=0.1.x",
+       "mongodb": ">=1.2.x"
    },
+   "engines": {
+       "node": ">=0.8.x"
+   }
 }
 
